--- a/20250720.md
+++ b/20250720.md
@@ -1,3 +1,45 @@
-# 今日学んだこと
-1. PCセットアップ
+# 学んだこと
 
+## PCセットアップ
+
+### インストール
+- Google日本語入力  
+- Zoom  
+- Docker  
+- VS Code  
+- Slack  
+- Google Chrome  
+
+### 設定
+- GitHub  
+
+### ターミナルの使い方（コマンド）
+- `cd`：ディレクトリ移動（homeディレクトリ）  
+- `cd [フォルダ名]`：指定したフォルダ名へ移動  
+- `mkdir`：ディレクトリを作成  
+
+---
+
+## 実践
+
+### GitHub
+- サインイン  
+- SSH Key作成・登録  
+- 「kinokodata」に参加  
+- 「color-asset-generator」をClaudeを使って作成  
+- Gitにbranchを作成してadd〜pull request 一連の流れ  
+
+### Docker
+- 「docker-sample」をローカルにpull  
+- VS Codeから起動  
+  - `docker-compose up`  
+  - Docker DesktopのContainersのポート番号をクリック  
+  - ブラウザで確認  
+  - `docker-compose down`  
+
+### その他のコマンド
+- `docker ps`：現在実行中のコンテナの一覧  
+  - STATUSがExited(2)など（）内が0以外のときはエラー  
+  - 数字によってエラー内容が異なる  
+- `docker logs [コンテナ名]`：実行時から現在のログ確認  
+  - エラー内容の確認にも使用  
