--- a/20251024.md
+++ b/20251024.md
@@ -1,14 +1,15 @@
 ## FEXAについて　CICDの学習
 ### 各フォルダについて
- * claude-rules
+ * claude-rules：
    claudecodeでコードを作成する際のルール
- * exam-app
+ * exam-app：
    問題を解くアプリ
- * frontend
+ * frontend：
    問題のチェック用アプリ
- * tools
+ * tools：
    問題を取り込むなどのツール
 
 ### API
-アプリとデータベースの間にAPI
+アプリとデータベースの間にAPI  
+
 アプリはAPIとデータのやり取りをする
