--- a/20251024.md
+++ b/20251024.md
@@ -1,13 +1,22 @@
 ## FEXAについて　CICDの学習
 ### 各フォルダについて
- * claude-rules：
-   claudecodeでコードを作成する際のルール
- * exam-app：
-   問題を解くアプリ
- * frontend：
-   問題のチェック用アプリ
- * tools：
-   問題を取り込むなどのツール
+
+#### claude-rules：claudecodeでコードを作成する際のルール
+   * デグレッション防止　
+
+        デグレッション（Degradation）：正常に動いていた機能が、機能追加やバグ修正、リファクタリング等による変更で動かなくなる現象
+
+        防止策：テストを実施する　→　Fexa/backend/tests
+
+   * ツール作成はdockerコンテナ上で実行できるようにする
+
+        dockerコマンド：スペース区切りを使用する（ハイフン区切りは古いコマンド）
+   
+#### exam-app：問題を解くアプリ
+
+#### frontend：問題のチェック用アプリ
+
+#### tools：問題を取り込むなどのツール
 
 ### API
 アプリとデータベースの間にAPI  
