--- a/20251212_nextの脆弱性について.md
+++ b/20251212_nextの脆弱性について.md
@@ -261,7 +261,7 @@ npm install react
 
 ### 依存関係のイメージ
 ```
-あなたのプロジェクト
+プロジェクト
  ├─ Next.jsパッケージ（Next.jsライブラリを含む）
  │   └─ Reactパッケージに依存
  ├─ Reactパッケージ（Reactライブラリを含む）
